--- a/theme.html
+++ b/theme.html
@@ -14,6 +14,7 @@
     {{ header_meta }}
 
     <!-- css -->
+    <link rel="stylesheet" type="text/css" href="{{ assets('css/stylesheets.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ assets('css/style.css') }}">
 
     <!-- standard google analytics -->
