--- a/theme.html
+++ b/theme.html
@@ -14,8 +14,9 @@
     {{ header_meta }}
 
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="{{ assets('css/stylesheets.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ assets('css/stylesheet.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ assets('css/style.css') }}">
+
 
     <!-- standard google analytics -->
     {% if site.analytics %}
