--- a/theme.html
+++ b/theme.html
@@ -46,6 +46,7 @@
       <div class="spinner"></div>
       <div class="shadow top"></div>
       <div class="overlay"></div>
+      <img src="{{ assets('images/margs.jpg') }}" class="rainbow" />
       <!-- <img src="{{ assets('images/rainbow-bg.png') }}" class="rainbow" /> -->
       <div class="container wide">
         <!-- <h1><a href="{{ site.base_url }}">{{ site.name }}</a></h1> -->
