--- a/theme.html
+++ b/theme.html
@@ -14,6 +14,20 @@
     {{ header_meta }}
 
     <!-- css -->
+    <style>
+      @font-face {
+          font-family: 'mission_scriptregular';
+          src: url("{{ assets('fonts/mission-script-webfont.eot') }}");
+          src: url("{{ assets('fonts/mission-script-webfont.eot?#iefix') }}") format('embedded-opentype'),
+               url("{{ assets('fonts/mission-script-webfont.woff2') }}") format('woff2'),
+               url("{{ assets('fonts/mission-script-webfont.woff') }}") format('woff'),
+               url("{{ assets('fonts/mission-script-webfont.ttf') }}") format('truetype'),
+               url("{{ assets('fonts/mission-script-webfont.svg#mission_scriptregular') }}") format('svg');
+          font-weight: normal;
+          font-style: normal;
+
+      }
+    </style>
     <link rel="stylesheet" type="text/css" href="{{ assets('css/stylesheet.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ assets('css/animate.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ assets('css/style.css') }}">
