--- a/theme.html
+++ b/theme.html
@@ -14,7 +14,7 @@
     {{ header_meta }}
 
     <!-- css -->
-    <style>
+    <style type="text/css">
       @font-face {
           font-family: 'mission_scriptregular';
           src: url("{{ assets('fonts/mission-script-webfont.eot') }}");
