--- a/theme.html
+++ b/theme.html
@@ -30,10 +30,8 @@
       }
     </style>
     -->
-
-    <link rel="stylesheet" type="text/css" href="{{ assets('css/animate.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ assets('css/style.css') }}">
-
+    <link rel="stylesheet" type="text/css" href="{{ assets('css/animate.css') }}">
 
 
     <!-- standard google analytics -->
@@ -57,33 +55,41 @@
     {{ login_form }}
 
     {% else %}
-    <header{% if is_post %} class="short"{% endif %}>
-      <div class="bg">
-        <div class="header-graphic">
+    <header>
+      <div class="header-graphic">
           <h4 class="animated fadeInDown">The</h4>
           <h1 class="animated fadeInUp">Blithe Home</h1>
           <div class="house">
           </div>
-        </div>
+      </div>
+    </header>
+    <!--
+    <header{% if is_post %} class="short"{% endif %}>
+      <div class="header-graphic">
+          <h4 class="animated fadeInDown">The</h4>
+          <h1 class="animated fadeInUp">Blithe Home</h1>
+          <div class="house">
+          </div>
+
       </div>
       <!-- <div class="spinner"></div> -->
       <!--   <div class="shadow top"></div> -->
       <!-- <div class="overlay"></div> -->
 
-      <!-- <img src="{{ assets('images/rainbow-bg.png') }}" class="rainbow" /> -->
+<!--       <img src="{{ assets('images/rainbow-bg.png') }}" class="rainbow" />
       <div class="container wide">
         <!-- <h1><a href="{{ site.base_url }}">{{ site.name }}</a></h1> -->
-        {% if pages %}
+<!--         {% if pages %}
         <ul class="cover-nav">
           <li><a href="{{ site.base_url }}">Blog</a></li>
             {% for page in pages %}
             <li><a href="{{ page.permalink }}" class="{{ set_active(page.permalink) }}">{{ page.title }}</a></li>
             {% endfor %}
         </ul>
-        {% endif %}
-      </div>
-    </header>
-
+        {% endif %} -->
+<!--       </div>
+    </header> --> -->
+    -->
     <div class="container content">
 
       <div class="bio">
