--- a/theme.html
+++ b/theme.html
@@ -69,7 +69,7 @@
     <div class="container content">
 
       <div class="bio">
-        <a class="user-avatar" a href="index.html">
+        <a class="user-avatar" a href="http://theblithehome.com/">
           <img src="{{ site.avatar }}" />
         </a>
         <div class="user-avatar-hover">
